--- a/src/Services/Marketing/Marketing.API/appsettings.json
+++ b/src/Services/Marketing/Marketing.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "AppSettings": {
+    "WorkItemCount": 100,
+
+    "QueueSettings": {
+      "HostName": "localhost",
+      "VirtualHost": "/",
+      "UserName": "guest",
+      "Password": "guest"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
