--- a/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
+++ b/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
@@ -4,5 +4,15 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MassTransit" Version="7.0.6" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.0.6" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
+  </ItemGroup>
+
 
 </Project>
