--- a/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
+++ b/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
@@ -14,5 +14,9 @@
     <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
