--- a/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
+++ b/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="MassTransit" Version="7.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
+  </ItemGroup>
+
 </Project>
