--- a/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
+++ b/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MassTransit" Version="7.0.6" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.0.6" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
