--- a/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
+++ b/src/Services/PushNotifying/PushNotifying.API/PushNotifying.API.csproj
@@ -9,10 +9,13 @@
     <PackageReference Include="MassTransit.AspNetCore" Version="7.0.6" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="7.0.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
+    <ProjectReference Include="..\PushNotifying.Application\PushNotifying.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
