--- a/src/Services/PushNotifying/PushNotifying.Application/PushNotifying.Application.csproj
+++ b/src/Services/PushNotifying/PushNotifying.Application/PushNotifying.Application.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
+    <ProjectReference Include="..\PushNotifying.Infrastructure\PushNotifying.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
