--- a/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
+++ b/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
