--- a/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
+++ b/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
@@ -6,14 +6,12 @@
 
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="7.0.6" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
