adding sql connection provider

--- a/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
+++ b/src/Services/Marketing/Marketing.Infrastructure/Marketing.Infrastructure.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\..\MessageContract\MessageContract.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\Dapper\" />
+  </ItemGroup>
+
 </Project>
